style(p1): pint auto-format P1 files
